@@ -76,6 +76,16 @@ GUIOptionsMenu::GUIOptionsMenu()
 
   option = new HUDuiList;
   option->setFontFace(fontFace);
+  option->setLabel("Always Show Team Scores:");
+  option->setCallback(callback, (void*)"q");
+  options = &option->getList();
+  options->push_back(std::string("Off"));
+  options->push_back(std::string("On"));
+  option->update();
+  listHUD.push_back(option);
+
+  option = new HUDuiList;
+  option->setFontFace(fontFace);
   option->setLabel("Scoreboard Font Size:");
   option->setCallback(callback, (void*)"S");
   options = &option->getList();
@@ -318,6 +328,7 @@ void			GUIOptionsMenu::resize(int _width, int _height)
     int i = 1;
     ((HUDuiList*)listHUD[i++])->setIndex(BZDBCache::radarStyle);
     ((HUDuiList*)listHUD[i++])->setIndex(ScoreboardRenderer::getSort());
+    ((HUDuiList*)listHUD[i++])->setIndex(ScoreboardRenderer::getAlwaysTeamScore());
     ((HUDuiList*)listHUD[i++])->setIndex(static_cast<int>(BZDB.eval
 							  ("scorefontsize")));
     ((HUDuiList*)listHUD[i++])->setIndex(static_cast<int>(BZDB.eval
@@ -489,6 +500,10 @@ void			GUIOptionsMenu::callback(HUDuiControl* w, void* data)
       
     case 'p':
       ScoreboardRenderer::setSort (list->getIndex());
+      break;
+
+    case 'q':
+      ScoreboardRenderer::setAlwaysTeamScore (list->getIndex());
       break;
 
   }
