@@ -4,6 +4,7 @@
 BZFlag 2.0.3
 ------------
 
+* Added 'Always Show Team Scores' option (GUI Options Menu)- Mark Thomas
 * Added beautify scores - Julio Jimenez
 * Added scoreboard sort option - Mark Thomas, Karsten Behrmann ('BearPerson')
 * Ricochet is performed on shots fired over the boundary wall - Daniel Remenak
